[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brd_package_misaelaguayo"
version = "0.0.3"
authors = [
    { name="Misael Aguayo", email="aguayo.misael@gmail.com" },
]
description = "A small language"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/misaelaguayo/BRD"
"Bug Tracker" = "https://github.com/misaelaguayo/BRD/issues"
